--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   url_launcher: ^6.1.12
   font_awesome_flutter: ^10.5.0
   lottie: ^3.1.2
+  flutter_card_swiper: ^7.0.1
+  animated_text_kit: ^4.2.1
+  youtube_player_iframe: ^5.1.5
+  webview_flutter: ^4.2.2
 
 dev_dependencies:
   flutter_test:
